# serializer version: 1
# name: test_platform_setup_and_discovery[select.katzenklappe_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.katzenklappe_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1299453-locking',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.katzenklappe_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe None',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_lid_close_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lid close delay',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lid',
    'unique_id': '269654-lid',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_lid_close_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_training_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Training Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'training_mode',
    'unique_id': '269654-training_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_training_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_remove_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_remove_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remove Assigned Device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remove_assigned_device',
    'unique_id': '472721-remove_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_remove_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Remove Assigned Device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.katzenklappe_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.katzenklappe_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1299453-locking',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.katzenklappe_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe None',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_assign_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_assign_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Assign device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'add_assigned_device',
    'unique_id': '472721-add_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_assign_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Assign device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_assign_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_lid_close_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lid close delay',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lid',
    'unique_id': '269654-lid',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_lid_close_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_training_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Training Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'training_mode',
    'unique_id': '269654-training_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_training_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_remove_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_remove_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remove Assigned Device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remove_assigned_device',
    'unique_id': '472721-remove_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_remove_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Remove Assigned Device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
